[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Walls.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Arena.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Blood_spawn.gd" type="Script" id=3]
[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Pictures/Square.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Audio_MenuArena.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sounds/Magician Lord - Stage 3 Music Highway Leading to a Foreign Space.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="Arena" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="Walls" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Bloodcell Spawner" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Enemy_spawn_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Immunity_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 257, 212 )
scale = Vector2( 5.77266, 7.7375 )
z_index = -100
texture = ExtResource( 4 )

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 599.0
__meta__ = {
"_edit_lock_": true
}

[node name="Health" type="Label" parent="UI/Control"]
margin_left = 24.0
margin_top = 214.0
margin_right = 174.0
margin_bottom = 264.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 3 )
text = "  Health: 3"
valign = 1
script = ExtResource( 8 )

[node name="ImmunityPBar" type="TextureProgress" parent="UI/Control"]
margin_left = 40.0
margin_top = 484.0
margin_right = 56.0
margin_bottom = 500.0
rect_scale = Vector2( 1.375, 13.563 )
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.972549, 0.286275, 0.286275, 1 )
tint_progress = Color( 0.00392157, 0.705882, 0.690196, 1 )

[node name="InfectionPBar" type="TextureProgress" parent="UI/Control"]
margin_left = 38.0
margin_top = 214.0
margin_right = 54.0
margin_bottom = 230.0
rect_scale = Vector2( 1.375, 13.563 )
value = 57.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.972549, 0.286275, 0.286275, 1 )
tint_progress = Color( 0.0901961, 0.705882, 0.00392157, 1 )

[node name="Immunity" type="Label" parent="UI/Control"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 41.0
margin_top = 712.0
margin_right = 258.0
margin_bottom = 734.0
rect_rotation = -89.9503
text = "Immunity"
align = 1
valign = 1

[node name="Infection" type="Label" parent="UI/Control"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 38.0
margin_top = 429.0
margin_right = 250.0
margin_bottom = 451.0
rect_rotation = -89.9503
text = "Infection"
align = 1
valign = 1

[node name="bgm" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Layer" type="ParallaxBackground" parent="."]
pause_mode = 2
layer = 128

[node name="Pause_Menu" type="VBoxContainer" parent="Layer"]
pause_mode = 2
margin_left = 1438.0
margin_top = 441.0
margin_right = 1520.0
margin_bottom = 533.0

[node name="Fundo" type="Sprite" parent="Layer/Pause_Menu"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
position = Vector2( -7, -9.99997 )
scale = Vector2( 6.0625, 6.875 )
texture = ExtResource( 6 )
centered = false

[node name="Unpause" type="Button" parent="Layer/Pause_Menu"]
pause_mode = 2
margin_right = 82.0
margin_bottom = 20.0
text = "Unpause"

[node name="Audio" type="Button" parent="Layer/Pause_Menu"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Audio"

[node name="Menu" type="Button" parent="Layer/Pause_Menu"]
pause_mode = 2
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
text = "Quit Game"

[node name="Quit" type="Button" parent="Layer/Pause_Menu"]
pause_mode = 2
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
text = "Menu"

[node name="Audio_Menu" type="VBoxContainer" parent="Layer"]
pause_mode = 2
margin_left = 1437.0
margin_top = 566.0
margin_right = 1564.0
margin_bottom = 662.0
script = ExtResource( 7 )

[node name="Fundo" type="Sprite" parent="Layer/Audio_Menu"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
position = Vector2( -6.99997, -9.99996 )
scale = Vector2( 8.8125, 7.625 )
texture = ExtResource( 6 )
centered = false

[node name="Music" type="Label" parent="Layer/Audio_Menu"]
margin_right = 127.0
margin_bottom = 14.0
text = "Music"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="Layer/Audio_Menu"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 34.0
min_value = 0.001
max_value = 1.0
step = 0.05
value = 1.0

[node name="Effects" type="Label" parent="Layer/Audio_Menu"]
margin_top = 38.0
margin_right = 127.0
margin_bottom = 52.0
text = "Efeitos Sonoros"
align = 1
valign = 1

[node name="EffectsSlider" type="HSlider" parent="Layer/Audio_Menu"]
margin_top = 56.0
margin_right = 127.0
margin_bottom = 72.0
min_value = 0.001
max_value = 1.0
step = 0.05
value = 1.0

[node name="Return" type="Button" parent="Layer/Audio_Menu"]
margin_top = 76.0
margin_right = 127.0
margin_bottom = 96.0
text = "Return"

[connection signal="timeout" from="Enemy_spawn_timer" to="." method="_on_Enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Immunity_timer" to="." method="_on_Immunity_timer_timeout"]
[connection signal="ready" from="UI/Control/Health" to="." method="_on_Health_ready"]
[connection signal="ready" from="UI/Control/ImmunityPBar" to="." method="_on_ImmunityPBar_ready"]
[connection signal="ready" from="UI/Control/InfectionPBar" to="." method="_on_InfectionPBar_ready"]
[connection signal="ready" from="UI/Control/Immunity" to="." method="_on_Immunity_ready"]
[connection signal="ready" from="UI/Control/Infection" to="." method="_on_Infection_ready"]
[connection signal="ready" from="Layer/Pause_Menu" to="." method="_on_Pause_Menu_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Unpause" to="." method="_on_Unpause_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Unpause" to="." method="_on_Unpause_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Audio" to="." method="_on_Audio_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Audio" to="." method="_on_Audio_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Menu" to="." method="_on_Menu_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Menu" to="." method="_on_Menu_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Quit" to="." method="_on_Quit_ready"]
[connection signal="ready" from="Layer/Audio_Menu" to="." method="_on_Audio_Menu_ready"]
[connection signal="ready" from="Layer/Audio_Menu/Music" to="." method="_on_Music_ready"]
[connection signal="value_changed" from="Layer/Audio_Menu/MusicSlider" to="Layer/Audio_Menu" method="_on_MusicSlider_value_changed"]
[connection signal="ready" from="Layer/Audio_Menu/Effects" to="." method="_on_Effects_ready"]
[connection signal="value_changed" from="Layer/Audio_Menu/EffectsSlider" to="Layer/Audio_Menu" method="_on_EffectsSlider_value_changed"]
[connection signal="pressed" from="Layer/Audio_Menu/Return" to="." method="_on_Return_pressed"]
[connection signal="ready" from="Layer/Audio_Menu/Return" to="." method="_on_Return_ready"]
